# EdgeViewer

./: README.md  gradlew.bat
README.md/: .gitignore  README.md
app/: build.gradle  settings.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgeviewer/: AndroidManifest.xml  CameraHandler.kt  GLSurface.kt  ImageUtil.kt  MainActivity.kt
web/: index.html  package.json  tsconfig.json
web/src/: main.ts
